--- a/mariadb-config.cnf
+++ b/mariadb-config.cnf
@@ -4,7 +4,8 @@ skip-networking=0
 bind-address=0.0.0.0  # Only needed if you want to allow remote connections
 local-infile=0
 symbolic-links=0
-# secure-file-priv completely removed to avoid normalization errors
+# Setting secure-file-priv to NULL explicitly instead of removing it
+secure-file-priv=NULL
 
 # User limits
 max_connections=100
